[package]
name = "rust-graphing-calc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
"colored" = "2.0.0"
arithmetic-parser = "0.3.0"
image = "0.24.7"
wasm-bindgen = "0.2.8"
web-sys = "0.3.6"
console_error_panic_hook = "0.1.7"
base64 = "0.21.4"